--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,20 @@
+src/aga_clock-big-sound/DFPlayer_Mini_Mp3.cpp
+src/aga_clock-big-sound/DFPlayer_Mini_Mp3.h
+src/aga_clock-big-sound/RTC8564.cpp
+src/aga_clock-big-sound/RTC8564.h
 src/aga_clock-big-sound/SevenSegmentController.cpp
 src/aga_clock-big-sound/SevenSegmentController.h
 
+src/aga_clock-small-sound/DFPlayer_Mini_Mp3.cpp
+src/aga_clock-small-sound/DFPlayer_Mini_Mp3.h
+src/aga_clock-small-sound/RTC8564.cpp
+src/aga_clock-small-sound/RTC8564.h
 src/aga_clock-small-sound/SevenSegmentController.cpp
 src/aga_clock-small-sound/SevenSegmentController.h
 
+src/aga_clock-small/DFPlayer_Mini_Mp3.cpp
+src/aga_clock-small/DFPlayer_Mini_Mp3.h
+src/aga_clock-small/RTC8564.cpp
+src/aga_clock-small/RTC8564.h
 src/aga_clock-small/SevenSegmentController.cpp
 src/aga_clock-small/SevenSegmentController.h
